fixed README, added more examples, now '--add-opens' are not necessary , remade entirely the switch retrofitting because of missing syntax cases, removed instanceof retrofitting (let the compiler do it's stuff instead), some refactoration